# test.bewise.media

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: __init__.py  records.py  users.py
app/core/: config.py  dependencies.py
app/db/: base.py
app/db/migrations/: env.py
app/db/migrations/versions/: ddc171343d32_init_migration.py
app/schemas/: user.py
